--- a/Mod04_T_A_06_08.ipynb
+++ b/Mod04_T_A_06_08.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "# 1) Seu código aqui\n",
-    "url = 'https://apidatalake.tesouro.gov.br/ords/sadipem/tt/pvl?uf=RJ&tipo_interessado=Estado'"
+    "url = 'https://apidatalake.tesouro.gov.br/ords/sadipem/tt/pvl?uf=RJ&tipo_interessado=Munic%C3%ADpio'"
    ]
   },
   {
@@ -455,7 +455,7 @@
    "source": [
     "# 3) Seu código aqui\n",
     "df2 = consulta_pvl('BA', 'Municipio')\n",
-    "df2['interessado'].value_counts()"
+    "df2.loc[df2['status']=='Deferido', 'interessado'].value_counts()"
    ]
   },
   {
